# NetSpeed

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  minimalist.desktop  netspeed.py
